--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -1,6 +1,6 @@
 <h1> HI NEW USER! </h1>
 
-<%= form_for :user do |f| %>
+<%= form_for :user, url:{action:"create"} do |f| %>
     <div class="form-group">
         <%= f.label :first_name %><br>
         <%= f.text_field :first_name, class:"form-control" %>
@@ -18,10 +18,23 @@
         <%= f.date_field :birthdate, class:"form-control" %>
     </div>
     <div>
-        TURN THIS INTO A SLIDER <br>
+        TURN THIS INTO A SLIDER (WHAT ARE YOU UP TO) <br>
         <%= f.label :career_status %><br>
         <%= f.number_field :career_status, class:"form-control" %>
     </div>
+    <div>
+        I can answer your questions about
+    </div>
+    <div>
+        I have questions about
+    </div>
+    <div>
+        We can meet up over
+    </div>
+    <div>
+        Times to best meet
+    </div>
+
     <div>
         <%= f.submit class:"btn btn-primary" %>
     </div>
