--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -23,13 +23,84 @@
         <%= f.number_field :career_status, class:"form-control" %>
     </div>
     <div>
-        I can answer your questions about
+        I can answer your questions about:
+        <div class="form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="">
+            Cooking
+          </label>
+        </div>
+        <div class="form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="">
+            Web Development
+          </label>
+        </div>
+        <div class="form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="">
+            Project Management
+          </label>
+        </div>
+        <div class="form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="">
+            MBAs
+          </label>
+        </div>
+        <div class="form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="">
+            Robotics
+          </label>
+        </div>
     </div>
     <div>
-        I have questions about
+        I have questions about:
+        <div class="form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="">
+            Cooking
+          </label>
+        </div>
+        <div class="form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="">
+            Web Development
+          </label>
+        </div>
+        <div class="form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="">
+            Project Management
+          </label>
+        </div>
+        <div class="form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="">
+            MBAs
+          </label>
+        </div>
+        <div class="form-check">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="">
+            Robotics
+          </label>
+        </div>
     </div>
     <div>
         We can meet up over
+        <div class="dropdown open">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">
+            Meeting Types
+          </button>
+          <div class="dropdown-menu" >
+            <a class="dropdown-item" href="#">Coffee</a>
+            <a class="dropdown-item" href="#">Happy Hour</a>
+            <a class="dropdown-item" href="#">Walk</a>
+            <a class="dropdown-item" href="#">Event</a>
+          </div>
+        </div>
     </div>
     <div>
         Times to best meet
